# accretion-db

./: .gitignore  BUGS_FOUND.md  Cargo.toml  DESIGN_NOTES.md  FORMAT.md  README.md
.github/workflows/: ci.yml
benches/: hot_paths.rs
benchmarks/: RESULTS.md
benchmarks/raw/: acc_buffered_matched_c1.txt  acc_durable_matched_c1.txt  b1_fillseq_group_c8_walbound.txt  b1_fillseq_osbuffered_c8.txt  b1_walbound_always_c1.txt  b1_walbound_always_c64.txt  b1_walbound_always_c8.txt  b1_walbound_group_c1.txt  b1_walbound_group_c64.txt  b1_walbound_group_c8.txt  b1_walbound_osbuffered_c1.txt  b1_walbound_osbuffered_c64.txt  b1_walbound_osbuffered_c8.txt  b1b_fullengine_always_c64.txt  b1b_fullengine_group_c64.txt  b1b_fullengine_osbuffered_c64.txt  b2_pointread_c8.txt  b3_scan.txt  fsync_probe_run1.txt  fsync_probe_run2.txt  fsync_probe_run3.txt  sled_buffered_c1.txt  sled_buffered_pointread_c8.txt  sled_durable_c1.txt
docs/: VERIFICATION.md
scripts/: fsync_probe.rs  run_matrix.sh
src/: compaction.rs  db.rs  lib.rs  manifest.rs
src/iter/: mod.rs  proptests.rs  tests.rs
src/memtable/: mod.rs  tests.rs
src/sstable/: bloom.rs  builder.rs  mod.rs  reader.rs
src/storage/: mod.rs  real.rs  sim.rs
src/testkit/: mod.rs
src/wal/: frame.rs  mod.rs  recovery.rs  segment.rs
tests/: crash.rs  engine.rs  harness.rs  model.proptest-regressions  model.rs  process_kill.rs  simfs.rs  sstable.rs  wal.rs
