[package]
name = "accretion-db"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Embeddable LSM-tree storage engine in Rust, crash consistency proven by simulated-power-loss fault injection."
authors = ["Ivan Wang <59074138+iwang-1@users.noreply.github.com>"]
readme = "README.md"
repository = "https://github.com/iwang-1/accretion-db"
keywords = ["lsm", "storage-engine", "database", "wal", "crash-consistency"]
categories = ["database-implementations"]

[dependencies]
crc32fast = "1"
rand = "0.8"
xxhash-rust = { version = "0.8", features = ["xxh3", "xxh64"] }

[dev-dependencies]
proptest = "1"
criterion = "0.5"
sled = "0.34"
tempfile = "3"

[profile.release]
debug = true

# The real-process kill harness child (S3), driven by tests/process_kill.rs:
# the parent spawns it on RealFs and SIGKILLs it mid-load, then reopens and
# verifies every acknowledged key survived. The accretion-bench throughput
# driver and criterion benches land in S5.
[[bin]]
name = "accretion-crashtest"
path = "src/bin/accretion-crashtest.rs"
